# Bldr

./: !!!!memory.md  !!!TO-DO_checklist.md  !!!TO-DO_plan.md  .env.example  .gitignore  .pre-commit-config.yaml  AI_FIXES_SUMMARY.md  AI_SHELL_FIX_SUMMARY.md  API_KEYS_GUIDE.md  AUTH_FIX_REPORT.md  BACKEND_INITIALIZATION_FIX.md  BATCH_FILE_CLEANUP_SUMMARY.md  BOT_AND_DB_TOOLS_ENHANCEMENT_REPORT.md  CHANGELOG.md  COMPLETE_DUPLICATE_ELIMINATION_GUIDE.md  COMPLETE_TOOLS_REGISTRY.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  CURSOR-INTEGRATION-GUIDE.md  DUPLICATE_ELIMINATION_README.md  DUPLICATE_ELIMINATION_SUMMARY.md  Dockerfile  E2E_ANALYSIS_REPORT.md  E2E_FLOW_DIAGRAM.md  E2E_TESTING.md  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  ENHANCED_RAG_MODULE_IMPLEMENTATION.md  FINAL_DUPLICATES_REMOVAL_REPORT.md  FINAL_E2E_REPORT.md  FINAL_FILE_MANAGER_ENHANCEMENT_REPORT.md  FINAL_FIXES_REPORT.md  FINAL_NTD_FIX_SUMMARY.md  FINAL_PATCH_14_CAREFUL_REPORT.md  FINAL_PATCH_14_CONTROL_REPORT.md  FINAL_PATCH_14_REPORT.md  FINAL_RAG_INTEGRATION_GUIDE.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_NETWORK_FIXES.md  FRONTEND_TRAINING_INTEGRATION.md  (+503 more)
backend/: Dockerfile  README.md  __init__.py  alembic.ini  benchmark_api.py  main.py  ntd_api.py  pyproject.toml  queue_api.py  rag_api.py  requirements.txt  security_api.py  test_projects_api.py  tracing_api.py
backend/alembic/: env.py
backend/api/: autotest_api.py  meta_tools_api.py  models_api.py  prompts_api.py  tools_api.py  tools_registry_api.py  websocket_server.py
backend/bots/: project_request_bot.py
(+846 files in other folders)
